code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__hooks_slash_completion.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ─────────────────────────────────────────────────────────────────────── 1/1   
  /hooks                     browse and manage Hooks                            
  ────────────────────────────────────────────────────────────────────────────  
  > /hooks                                                                      
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter send  ·  shift+tab permissions
