code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__input_history_search_cancelled.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ⏸ Manual                                                                                          
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                 
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
