code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_effort_selected.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> GPT Effort    ← ██ ██ ██ → High                                        │             
            │  GPT Other       ██ ██ ██   Low                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  Tab setting · ←→ adjust · / search · p pin · Enter apply · Esc cancel  │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
