code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_favorites_empty.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Favorites    My gateway                                               │             
            │                                                                         │             
            │  No models here · Pin models from a provider tab to Favorites           │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Enter to apply · Tab/Shift+Tab to switch · Esc to close                │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
