code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_list_pinned.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> gateway-model                                                          │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  Unconfigured model                                                     │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  ↑↓ select · / search · p unpin · Enter apply · Esc cancel              │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
