code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_list_search.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ gat                                                                │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  gateway-model                                                 —    —   │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  Enter/Esc/Ctrl+C to return                                             │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
