code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_pin_catalog_order_fullscreen.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
fourth pinned=true
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
            │  second model                                                           │             
  ──────────│  third model                                                            │───────────  
  > Build an│  ↑↓ select · / search · p unpin · Enter apply · Esc cancel              │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model   
                                                                                                    
                                                                                                    

third pinned=true
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │> third model                                                            │             
            │  fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
  ──────────│  second model                                                           │───────────  
  > Build an│  ↑↓ select · / search · p unpin · Enter apply · Esc cancel              │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model   
                                                                                                    
                                                                                                    

third pinned=false
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Pinned ─────────────────────────────────────────────────────────────── │             
            │  fourth model                                                           │             
            │                                                                         │             
            │  Other models ───────────────────────────────────────────────────────── │             
            │  first model                                                            │             
            │  second model                                                           │             
  ──────────│> third model                                                            │───────────  
  > Build an│  ↑↓ select · / search · p pin · Enter apply · Esc cancel                │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model   
                                                                                                    
                                                                                                    

fourth pinned=false
  .                                                                                    [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  first model                                                            │             
            │  second model                                                           │             
            │  third model                                                            │             
            │> fourth model                                                           │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  ↑↓ select · / search · p pin · Enter apply · Esc cancel                │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
