code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_pin_catalog_order_inline.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
fourth pinned=true
                                                                                                    
  Ash Code v0.1.0                                                                                   
  Automatic model                                                                                   
  .                                                                                                 
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  Pinned ─────────────────────────────────────────────────────────────────────────────────────────  
> fourth model                                                                                      
                                                                                                    
  Other models ───────────────────────────────────────────────────────────────────────────────────  
  first model                                                                                       
  second model                                                                                      
  third model                                                                                       
                                                                                                    
  ↑↓ select · / search · p unpin · Enter apply · Esc cancel                                         

third pinned=true
                                                                                                    
  Ash Code v0.1.0                                                                                   
  Automatic model                                                                                   
  .                                                                                                 
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  Pinned ─────────────────────────────────────────────────────────────────────────────────────────  
> third model                                                                                       
  fourth model                                                                                      
                                                                                                    
  Other models ───────────────────────────────────────────────────────────────────────────────────  
  first model                                                                                       
  second model                                                                                      
                                                                                                    
  ↑↓ select · / search · p unpin · Enter apply · Esc cancel                                         

third pinned=false
                                                                                                    
  Ash Code v0.1.0                                                                                   
  Automatic model                                                                                   
  .                                                                                                 
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  Pinned ─────────────────────────────────────────────────────────────────────────────────────────  
  fourth model                                                                                      
                                                                                                    
  Other models ───────────────────────────────────────────────────────────────────────────────────  
  first model                                                                                       
  second model                                                                                      
> third model                                                                                       
                                                                                                    
  ↑↓ select · / search · p pin · Enter apply · Esc cancel                                           

fourth pinned=false
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
─ Model ────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search models                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  first model                                                                                       
  second model                                                                                      
  third model                                                                                       
> fourth model                                                                                      
                                                                                                    
  ↑↓ select · / search · p pin · Enter apply · Esc cancel
